add pytest dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.121.1",
+    "pytest>=9.0.0",
+    "pytest-cov>=7.0.0",
 ]
