--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "fastapi[standard]>=0.121.1"
+]
+
+[dependency-groups]
+dev = [
     "fastapi[standard]>=0.121.1",
     "pytest>=9.0.0",
     "pytest-cov>=7.0.0",
