change command install dependencies for unit test

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,7 +20,7 @@ jobs:
 
           uv venv
           source .venv/bin/activate
-          uv sync
+          uv sync --only-dev
 
           coverage run -m pytest app
           coverage report
