--- a/.github/workflows/quality-scan.yaml
+++ b/.github/workflows/quality-scan.yaml
@@ -8,7 +8,24 @@ jobs:
 
     steps:
       - uses: actions/checkout@v5
-      - uses: actions/setup-java@v5
+      - uses: actions/setup-python@v6
+        with:
+          python-version: '3.13'
+
+      - run: |
+          #!/bin/sh
+
+          set -xe
+
+          pip install uv
+
+          uv venv
+          source .venv/bin/activate
+          uv sync --only-dev
+
+          coverage run -m pytest app
+          coverage xml
+
         with:
           distribution: 'adopt'
           java-version: '21'
