--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,14 +12,14 @@ jobs:
         with:
           framework: dockerfile
           dockerfile_path: Dockerfile
-          check: CKV_DOCKER_1,CKV_DOCKER_7,CKV_DOCKER_8,CKV_DOCKER_10
-      # - uses: docker/login-action@v3
-      #   with:
-      #     registry: ghcr.io
-      #     username: ${{ github.actor }}
-      #     password: ${{ secrets.API_TOKEN }}
-      # - uses: docker/setup-buildx-action@v3
-      # - uses: docker/build-push-action@v6
-      #   with:
-      #     push: true
-      #     tags: ghcr.io/${{ github.actor }}/poc-devsecops:${{ github.sha }}
+          check: CKV_DOCKER_1,CKV_DOCKER_7,CKV_DOCKER_8
+      - uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.API_TOKEN }}
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: ghcr.io/${{ github.actor }}/poc-devsecops:${{ github.sha }}
