--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,9 +1,6 @@
-name: build pipeline
+name: ci pipeline
 
-on:
-  push:
-    tags:
-    - '*'
+on: push
 
 jobs:
   build:
@@ -11,16 +8,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v5
-      - uses: bridgecrewio/checkov-action@v12
-        with:
-          framework: dockerfile
-          dockerfile_path: Dockerfile
-          check: CKV_DOCKER_1,CKV_DOCKER_7,CKV_DOCKER_8
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.API_TOKEN }}
+      - uses: bridgecrewio/checkov-action@v12
+        with:
+          framework: dockerfile
+          dockerfile_path: .
+          check: CKV_DOCKER_7,CKV_DOCKER_8,CKV_DOCKER_10
       - uses: docker/setup-buildx-action@v3
       - uses: docker/build-push-action@v6
         with:
