--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -3,22 +3,9 @@ name: deployment pipeline
 on:
   push:
     tags:
-    - '*'
+      - '*'
 
 jobs:
-  retag:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v5
-
-      - run: |
-          #!/bin/sh
-
-          set -xe
-
-          echo "retag"
-
   update_manifest:
     runs-on: ubuntu-latest
 
@@ -31,4 +18,10 @@ jobs:
           set -xe
 
           echo "deployment"
-          git tag --points-at HEAD
+          CURRENT_TAG=$(git tag --points-at HEAD)
+
+          curl -L -O https://github.com/mikefarah/yq/releases/download/v4.48.1/yq_linux_amd64.tar.gz
+          tar -xzf yq_linux_amd64.tar.gz
+          mv yq /usr/local/bin/
+
+          la -la
