test update contaimer image

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -18,8 +18,12 @@ jobs:
           set -xe
 
           echo "deployment"
-          CURRENT_TAG=$(git tag --points-at HEAD)
+          #CURRENT_TAG=$(git tag --points-at HEAD)
+          CURRENT_TAG=v0.0.1
 
           curl -L -O https://github.com/mikefarah/yq/releases/download/v4.48.1/yq_linux_amd64.tar.gz
           tar -xzf yq_linux_amd64.tar.gz --strip-components=1
-          mv yq_linux_amd64 /usr/local/bin/
+          mv yq_linux_amd64 /usr/local/bin/yq
+          rm -f yq_linux_amd64.tar.gz
+
+          yq e -i '.images[0].newTag = "$CURRENT_TAG"' kustomize/overlays/dev/kustomization.yaml
