check current tag

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -27,3 +27,4 @@ jobs:
           rm -f yq_linux_amd64.tar.gz
 
           yq e -i '.images[0].newTag = "$CURRENT_TAG"' kustomize/overlays/dev/kustomization.yaml
+          cat kustomize/overlays/dev/kustomization.yaml
