--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -2,8 +2,8 @@ name: deployment pipeline
 
 on:
   push:
-    # tags:
-    #   - '*'
+    tags:
+      - '*'
 
 jobs:
   update_manifest:
@@ -21,8 +21,7 @@ jobs:
           set -xe
 
           echo "deployment"
-          #CURRENT_TAG=$(git tag --points-at HEAD)
-          CURRENT_TAG=v0.0.1
+          CURRENT_TAG=$(git tag --points-at HEAD)
 
           curl -L -O https://github.com/mikefarah/yq/releases/download/v4.48.1/yq_linux_amd64.tar.gz
           tar -xzf yq_linux_amd64.tar.gz --strip-components=1
@@ -41,4 +40,5 @@ jobs:
           checkov -d kustomize/overlays/dev --framework kustomize --check CKV_K8S_6,CKV_K8S_21,CKV_K8S_22
 
           kubectl kustomize kustomize/overlays/dev/ > kustomization.yaml
+          cat kustomization.yaml
           #kubectl apply kustomization.yaml
